public/css/style.css
/* ... */
/* Login, Register */

.auth {
    min-height: 100vh;
    background-color: var(--color-2);
    display: flex;
    justify-content: center;
    align-items: center;
}

.auth {
    font-family: var(--font-primary);
}

.auth-content {
    position: relative;
    width: 90vw;
    min-height: 90vh;
    background-color: #FFFF;
    border-radius: .7em;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

.circle-left {
    position: absolute;
    top: 0;
    left: 0;
    width: 5em;
}

.circle-right {
    position: absolute;
    top: 50%;
    right: -1.5em;
    height: 80%;
    transform: translateY(-50%);
}

.ring-circle {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 7em;
}

.auth-card {
    position: relative;
    z-index: 9;
    min-width: 50%;
    max-width: 90%;
    border: 5px solid rgba(198, 61, 47, 0.3);
    border-radius: 15px;
    color: var(--color-5);
    background-color: #FFFF;
}

.btn-auth {
    background-color: var(--color-1);
    border: none;
    border-radius: 5px;
    padding: .5em;
    color: #FFFF;
}

@media screen and (max-width: 767px) {
    .auth-content {
        margin: 2em 0;
    }
}

/* End of Login, Register */

/* Top section Logo, Date */

.top-navbar {
    display: block;
    background-color: var(--color-1);
    font-family: var(--font-primary);
    /* color: rgba(0, 0, 0, 0.65); */
    color: #FFFF;
}

.top-navbar span {
    font-family: var(--font-secondary);
}

@media screen and (max-width: 767px) {

    .top-navbar {
        padding: 1rem 0;
    }
    .top-navbar .navbar-brand {
        display: none !important;
    }
}

/* End of Top section Logo, Date */

/* Navbar */

.navbar {
    position: sticky !important;
    top: 0;
    left: 0;
    z-index: 9999;
    width: 100%;
    font-family: var(--font-primary);
    font-size: 1rem;
    background-color: #FFFF;
}

.navbar a.nav-link {
    font-family: var(--font-primary);
    font-weight: 700;
    margin: 0 .2em;
    padding: .5rem .6rem !important;
}

.navbar .nav-link {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    position: relative;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
  }
  .navbar .nav-link:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    border-radius: 5px;
    background: var(--color-1);
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transform-origin: 50%;
    transform-origin: 50%;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
  }
.navbar .nav-link:hover {
    color: white !important;
  }
.navbar .nav-link:hover:before {
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
}

.navbar .nav-link.active {
    color: #FFFF !important;
    background-color: var(--color-1);
    border-radius: 5px;
}

.navbar .dropdown-item.active, .dropdown-item:active {
    background-color: var(--color-1) !important;
}

.navbar .dropdown-item:hover {
    color: #FFFF !important;
    background-color: var(--color-1) !important;
}

.navbar .navbar-brand {
    display: none;
}

@media screen and (max-width: 767px) {

    .navbar .navbar-brand {
        display: inline-block;
    }
    .navbar .nav-item {
        margin: 2px 0;
    }

}

/* End of Navbar */

.main-wrapper {
    display: flex;
    min-height: 100vh;
}

/* Sidebar */

.sidebar {
    position: relative !important;
    height: auto !important;
    /* display: flex; */
    /* flex-direction: column; */
}

/* End of Sidebar */

/* Carousel */
.carousel {
    position: relative;
    overflow-x: hidden;
}

.bg-carousel {
    position: absolute;
    width: 100%;
    height: 100%;
    background: linear-gradient(90deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.40) 50.5%, rgba(0, 0, 0, 0.25) 100%);
}

.carousel-item img {
    height: 90vh;
    object-fit: cover;
    object-position: center;
}

.carousel-body {
    position: absolute;
    bottom: 20%;
    left: 12%;
    z-index: 999;
    color: #FFF;
}

.carousel-body .title {
    font-family: var(--font-primary);
    font-size: 6rem;
    font-weight: 700;
}

.carousel-body p {
    font-family: var(--font-secondary);
    font-size: 1rem;
}

@media screen and (max-width: 992px) {

    .carousel-body {
        bottom: 20%;
        left: 10%;
    }
    .carousel-body .title {
        font-size: 4rem;
    }
}

@media screen and (max-width: 767px) {

    .carousel-body .title {
        font-size: 1.5rem;
    }
    .carousel-body {
        bottom: 5%;
        left: 10%;
    }
}

/* About */
.about {
    min-height: 650px;
    display: flex;
}

.about-content {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.about-body {
    height: 100%;
    text-align: justify;
}

.img-about {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.about p {
    font-family: var(--font-secondary);
    font-size: 1rem;
    color: var(--color-5);
}

@media screen and (max-width: 767px) {
    .about header {
        text-align: center;
    }
}

@media screen and (min-width: 992px) {

    .about p {
        font-size: 1.5rem;
    }
}


/* berita */
.berita {
    min-height: 650px;
}

.berita-content {
    display: flex;
    justify-content: center;
    align-items: center;
}

.btn-see-all {
    background-color: var(--color-1);
    color: #FFFF;
    font-family: var(--font-primary);
    border: none;
    padding: 8px 10px;
    border-radius: 5px;
    font-weight: 600;
    text-decoration: none;
}
/* ... */

